codex-rs/cli/tests/snapshots/doctor_path_safety__doctor_config_not_found.snap
---
source: cli/tests/doctor_path_safety.rs
expression: "serde_json::to_string_pretty(&check)?"
---
{
  "category": "config",
  "details": {
    "error": "entity not found"
  },
  "id": "config.load",
  "remediation": "Fix the reported config error, then rerun blackarrow doctor.",
  "status": "fail",
  "summary": "config could not be loaded"
}
